nivasa-macros/tests/trybuild/controller_parameter_extractors_body_namevalue_invalid.stderr
error: `#[body]` only supports bare or string-list syntax
 --> tests/trybuild/controller_parameter_extractors_body_namevalue_invalid.rs:9:15
  |
9 |     fn create(#[nivasa_macros::body = "body"] body: String) {
  |               ^
